--- a/AngularApp/src/app/main/account/account.component.css
+++ b/AngularApp/src/app/main/account/account.component.css
@@ -30,3 +30,8 @@
     background-color: blue;
     color: white;
 }
+
+.justify-content-center {
+    display: flex !important;
+    justify-content: center !important;
+}
