Poner imagen y modificar rest en proceso

--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -53,7 +53,7 @@
                 edit
               </i>
             </button>
-            <button (click)="predetermineRest(restaurants[restKey])"
+            <button (click)="predetermineRest(restKey)"
               class="center-icon-btn btn-set-restaurant" ngbTooltip="Escoger como restaurante actual">
               <i class="material-icons icon">  
                 settings
@@ -145,7 +145,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <!-- <img class="card-img-top" src="{{restImage}}" width="100px" data-holder-rendered="true"> -->
+          <img class="card-img-top" src="{{restImage}}" width="50px" data-holder-rendered="true">
         </div>
         <div class="modal-body">
           <div class="form-group offset-md-1">
@@ -175,25 +175,7 @@
             </button>
           </div>
           <div id="collapseBtn" [ngbCollapse]="isImgOptsCollapsed">
-            <div class="form-group justify-content-center">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" (change)="switchImg()" [(ngModel)]="imgOpt" name="imageOpts" id="upImg" [value]="true">
-                <label class="form-check-label" for="upImg">Subir imagen</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" (change)="switchImg()" [(ngModel)]="imgOpt" name="imageOpts" id="lnkImg" [value]="false">
-                <label class="form-check-label" for="lnkImg">Link a imagen</label>
-              </div>
-            </div>
-            <div *ngIf="!imgOpt" class="form-group row"> 
-              <div class="input-group col-sm-11">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Link </span>
-                </div>
-                <input type="text" [(ngModel)]="restImage" class="form-control" id="imageP" placeholder="Link nueva imagen..." required> 
-              </div>
-            </div> 
-            <div *ngIf="imgOpt" class="form-group row">
+            <div class="form-group row">
               <div class="input-group col-sm-11">
                 <label for="imagenC">Elija una imagen de la computadora</label>
                 <input (change)="onFileChange($event)" type="file" accept=".jpg, .jpeg" class="form-control-file" id="imagenC" required>
@@ -243,7 +225,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" (click)="addRestaurant()" data-dismiss="modal" class="btn btn-info">Guardar</button>
+          <button type="button" (click)="modifyRestaurant()" data-dismiss="modal" class="btn btn-info">Guardar</button>
         </div>
       </div>
     </div>
