Lista de restaurantes ya en funcionamiento (agregar y editar)
- se puede ver horario
- falta predeterminar

--- a/AngularApp/src/app/main/account/account.component.css
+++ b/AngularApp/src/app/main/account/account.component.css
@@ -35,3 +35,8 @@
     display: flex !important;
     justify-content: center !important;
 }
+.img-rest{
+    border-radius: 50%;
+    height: 65px;
+    margin: 1%;
+}
