--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -60,7 +60,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{imagePlate}}" width="100px" data-holder-rendered="true"> 
+          <img class="card-img-top" src="{{imagePlate}}" data-holder-rendered="true"> 
         </div>
         <div class="modal-body offset-md-1">
           <div class="form-group row"> 
