--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -23,7 +23,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let restKey of restaurantsKeys" scope="row">
-          <td><img class="card-img-top" src="{{restaurants[restKey].imagen}}" width="50px" data-holder-rendered="true"></td>
+          <td><img class="img-rest" src="{{restaurants[restKey].imagen}}" width="70px" data-holder-rendered="true"></td>
           <td>{{restaurants[restKey].nombre}}</td>
           <td>{{restaurants[restKey].empresa}}</td>
           <td>{{restaurants[restKey].descripcion}}</td>
@@ -146,7 +146,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{restImage}}" width="50px" data-holder-rendered="true">
+          <img class="card-img-top img-modal" src="{{restImage}}" data-holder-rendered="true">
         </div>
         <div class="modal-body">
           <div class="form-group offset-md-1">
