--- a/AngularApp/src/app/main/account/account.component.css
+++ b/AngularApp/src/app/main/account/account.component.css
@@ -26,7 +26,12 @@
     color: white;
 }
 
-.btn-set-restaurant {
+.btn-current-restaurant {
+    background-color: gray;
+    color: white;
+}
+
+.btn-list-restaurant {
     background-color: blue;
     color: white;
 }
