--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -2,6 +2,7 @@
   <section class="jumbotron menu" style="margin: 0%; padding: 16px 8px 32px">
     <div class="container text-center">
       <h5 style="margin-bottom: 6%" class="card-title font-subtitle">Restaurantes asociados a mi cuenta</h5>
+      <h6 class="card-title font-title">{{defaultRestaurant.name}}</h6>
     </div>
     <button [disabled]="true" type="button" class="btn btn-dark">
       <img class="img-user" src={{user.photoURL}} width="60px" alt="foto usuario">  {{user.nombre}}
