--- a/AngularApp/src/app/main/main-page/main-page.component.html
+++ b/AngularApp/src/app/main/main-page/main-page.component.html
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Usuario: {{user.nombre}}</a>
+  <a class="navbar-brand" href="/dashboard">Usuario: {{user.nombre}}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <div *ngFor="let item of navItems" class="navbar-nav">
         <a class="nav-item nav-link" (click)="goTo(item.href)" >{{item.item}}</a>
+    </div>
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" (click)="backToLogin()">Salir</a>
     </div>
   </div>
 </nav>
