Botón para descargar la app

--- a/AngularApp/src/app/main/login/login.component.html
+++ b/AngularApp/src/app/main/login/login.component.html
@@ -16,6 +16,9 @@
           <div class="centerDiv">
             <button type="button" class="btn btn-link" hidden (click)="logout()" hidden id="LogoutBtn">Cerrar sesión</button>
           </div>
+          <div class="centerDiv">
+            <button type="button" class="btn btn-info" hidden (click)="downloadAPP()" hidden id="LogoutBtn">Descarga la APP</button>
+          </div>
         </div>
       </div>
   </div>
@@ -88,7 +91,7 @@
         </agm-map>
       </div>
       <div class="modal-footer">
-        <button type="button" data-dismiss="modal" class="btn btn-dark">Aceptar</button> 
+        <button type="button" data-dismiss="modal" class="btn btn-dark">Aceptar</button>
       </div>
     </div>
   </div>
